# guardrail_safebank

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LIMITATIONS.md  README.md  _poc_guardrails.py  config.example.yaml  conftest.py  docker-compose.yml  guardrails.py  guardrails_legacy.py  main.py  pyproject.toml  real_chatbot.py  requirements.txt  test_guardrails.py
.buddy/: ARCHITECTURE.md  CHANGELOG_SUMMARY.md  GETTING_STARTED.md  INTEGRATIONS.md  LINKS.md  README_FOR_HUMANS.md  STARTER_TASKS.md  TECH_STACK.md  manifest.json  tour.html
.buddy/INDEX/: links.json
.buddy/MAP/: data_flow.md  entry_points.md  repo_map.md
.buddy/NOTES/: assumptions.md  open_questions.md
.claude/: settings.json
.claude/agents/: buddy.md
.claude/commands/: create-prd.md  create-stories.md  implement.md  plan.md  prd-interactive.md  review.md
.claude/hooks/: check_commit.py  ensure_main.py
.claude/rules/: building-rigorously.md
.claude/skills/: omarchy
.github/agents/: buddy.md
.github/workflows/: ci.yml
adr/: 001-abandon-guardrails-ai.md  002-langgraph-standalone.md  003-llm-judge-compliance.md  004-layered-jailbreak.md  005-regex-pii-no-presidio.md  006-local-embeddings.md
data/banking_kb/: 01_cartao_gold.md  01_pix_doc.md  02_aplicacoes_financeiras.md  02_cdb.md  03_pix.md  03_tipos_credito.md  04_cartao_credito_rotativo.md  04_conta_corrente.md  05_credito_consignado.md  05_emprestimo_pessoal.md  06_financiamento_imobiliario.md  07_atendimento.md  07_tarifas_bancarias.md  08_atendimento_preferencial.md  08_seguranca.md  09_produtos_investimento.md  09_sigilo_pix.md
data/eval/: banking_kb_eval.jsonl  faq_bacen_corpus.jsonl  faq_bacen_eval.jsonl
demo/: 01-happy.http  01-happy.sh  02-jailbreak.http  02-jailbreak.sh  03-pii.http  03-pii.sh  04-compliance.http  04-compliance.sh  05-output-guard.sh  CHEATSHEET.md  README.md  WALKTHROUGH.md  chat_cli.py
demo/scripts/: __init__.py  auto_demo.py  consistency_test.py  playground.py  test_beat4.py  timer.py
docker/: Dockerfile.api  Dockerfile.models  Dockerfile.ui
docs/: RAG.md  RAG_interview_notes.md
guardrails/: __init__.py  _pii_patterns.py  config.py  env_bootstrap.py
guardrails/adapters/: __init__.py  embedding.py  llm.py  reranker.py  vector_store.py
guardrails/api/: __init__.py  app.py  schemas.py
guardrails/compliance/: prompt.py  rubric.py
guardrails/detectors/: __init__.py  base.py  data_leak.py  financial_advice.py  fraud.py  out_of_scope.py
guardrails/observability/: __init__.py  logger.py
guardrails/pipeline/: __init__.py  graph.py  nodes.py  state.py
guardrails/validators/: __init__.py  base.py  compliance.py  compliance_rules.py  jailbreak.py  out_of_scope.py  pii.py  toxic.py
models/eval/: bakeoff_faq_bacen.md  bakeoff_faq_bacen_summary.json  banking_kb__intfloat__multilingual-e5-base__20260611_224524.json  banking_kb__intfloat__multilingual-e5-small__20260611_220713.json  faq_bacen__intfloat__multilingual-e5-base__20260611_224235.json  faq_bacen__intfloat__multilingual-e5-base__20260612_030818.json  faq_bacen__intfloat__multilingual-e5-base__20260612_031232.json  faq_bacen__intfloat__multilingual-e5-base__20260612_033951.json  faq_bacen__intfloat__multilingual-e5-small__20260611_220850.json  faq_bacen__intfloat__multilingual-e5-small__20260611_223546.json  retrieval_before_after.md  (+1 more)
scripts/: _faq_data.py  bakeoff_embeddings.py  build_jailbreak_index.py  build_outofscope_seeds.py  eval_retrieval.py  finetune_itau_embedding.py  ingest_banking_kb.py  ingest_itau_faq.py  measure_jailbreak_layers.py  screen_hatebr.py  screen_realtoxicityprompts.py  translate_fixtures.py
slides/: cpqd.tex
ui/: streamlit_app.py
(+123 files in other folders)
