[project]
name = "llm-guardrails-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "detoxify>=0.5.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "slow: marks tests that load heavy ML models (deselect with -m 'not slow')",
]

[tool.ruff]
exclude = [
    ".claude/skills",
    ".buddy",
]
