[project]
name = "llm-guardrails-tutorial"
version = "0.1.0"
description = "Bidirectional LLM guardrail proxy for B2C banking chatbots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "detoxify>=0.5.2",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langgraph>=0.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.13",
    "sentence-transformers>=3.0",
    "structlog>=25.1",
    "torch>=2.2",
    "transformers>=4.40",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.15.14",
]

[project.scripts]
guardrails-api = "guardrails.api.app:run"
guardrails-ui = "streamlit.cli:main"

[project.optional-dependencies]
streamlit = ["streamlit>=1.41"]
datasets = ["datasets>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

markers = [
    "slow: marks tests that load heavy ML models (deselect with -m 'not slow')",
    "adversarial: marks adversarial integration tests (external fixtures, full pipeline)",
    "network: marks tests that require external API calls (Anthropic, HF datasets download)",
]

[tool.ruff]
line-length = 220
exclude = [
    ".claude/skills",
    ".claude/hooks",
    ".buddy",
]
